--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,10 @@
 {
-    "name": "aluzed/php",
+    "name": "aluzed/redis-web-token",
     "require": {
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "phpunit/phpunit": "^6.5"
     },
+    "keywords": ["redis web token", "token", "redis token"],
     "license": "MIT",
     "authors": [
         {
