--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "aluzed/redis-web-token",
     "require": {
       "predis/predis": "^1.1",
+      "php": "^5.3.3 || ^7.0"
     },
     "require-dev": {
       "phpunit/phpunit": "^6.5"
@@ -13,5 +14,10 @@
         "name": "Alexandre PENOMBRE",
         "email": "aluzed@gmail.com"
       }
-    ]
+    ],
+    "autoload": {
+        "classmap": [
+            "src/"
+        ]
+    },
 }
